# styxx

./: .gitattributes  .gitignore  ANNOUNCEMENT_7.9.0.md  AUTOPILOT.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INVENTION-CIS-v0.md  LEADERBOARD.md  LICENSE  PATENTS.md  PROVENANCE.md  README.md  REFERENCE.md  REPLICATIONS.md  SECURITY.md  VISION_MOONSHOTS.md  WHAT-WE-BUILT-2026-04-22.md  dogfood_legibility_self_audit.py  dogfood_legibility_self_audit_result.json  dogfood_opus_self_audit_contrast_result.json  dogfood_opus_self_audit_result.json  pyproject.toml  reproduce.sh  self_audit.py  test_deep.py  test_deep2.py  test_deep3.py
.github/: pull_request_template.md
.netlify/: netlify.toml
.well-known/: agent-card.json
bench/: README.md  suite.yaml
benchmarks/: adversarial_benchmark.py  adversarial_report.md  adversarial_results.json  anthropic_hack_eval.py  anthropic_hack_real.py  anthropic_hack_real_consensus.json  anthropic_hack_real_results.json  anthropic_hack_real_text.json  cognometric_basis_v0.json  cognometry_fingerprint_atlas_v0.json  compete_hhem_halueval_qa.json  confabulation_claude.py  confabulation_fixtures.jsonl  confabulation_fixtures_v2.jsonl  confabulation_results.json  confabulation_results_v2.json  confabulation_results_v3.json  deception_feature_scaling.json  deception_weights_v0.json  depression_feature_scaling.json  depression_weights_v0.json  drift_calibrated_v0.json  drift_calibrated_v1.json  drift_feature_scaling.json  drift_null_baselines_v0.json  equivalence_correlate.py  equivalence_prompts_v0.jsonl  equivalence_tier0_styxx_20260419.jsonl  goal_drift_feature_scaling.json  goal_drift_weights_v0.json  hallucination_feature_scaling.json  loop_feature_scaling.json  loop_weights_v0.json  measurement_equivalence_tier0.py  overconfidence_feature_scaling.json  overconfidence_weights_v0.json  plan_action_feature_scaling.json  plan_action_weights_v0.json  plot_confab_trajectories.py  refusal_cross_model_feature_scaling.json  (+11 more)
data/: cognometric_rlhf_demo_v0.jsonl  self_healing_reflex_v0.jsonl
demo/: make_053_gif.py  make_boot_gif.py  make_reflex_gif.py  make_slides.py  make_working_gif.py
docs/: COMPATIBILITY.md  OPERATOR_BRIEF_2026_07_14.md  OPERATOR_BRIEF_2026_07_20.md  README.md  REFERENCE.md  anthropic-support.md  attestation-content-address.md  cognet-protocol-v0.md  cognitive-metrology-charter.md  fathom-spec-v0.md  gate.md  tier3_design.md
drafts/: announcement_2026_05_27.md  announcement_2026_05_29_pope_construct_ceiling.md  announcement_2026_05_29_self_audit_pope_demo.md  auditors_arc_post_2026_07_05.md
examples/: README.md  _build_audit_confound_colab.py  anthropic_hybrid.py  attack_quickstart.py  audit_claim_example.py  audit_confound_colab.ipynb  audit_session_example.py  cline_proxy.py  cogn_rlhf_divergence.py  cogn_rlhf_divergence_colab.ipynb  cognometric_reward_basic.py  cognometry_colab.ipynb  cognometry_colab_anthropic.ipynb  colab_60_second_demo.ipynb  eu_ai_act_compliance_example.py  gate_demo.py  meaning_quickstart.py  mount_certified_conscience.py  mount_relock_defense.py  openai_live.py  probe_validity_colab.ipynb  quickstart.py  reflex_demo.py  self_correcting_generation.py  self_healing_reflex_demo.py  synth_multi_instrument.py  synth_preference_pairs.py  thought_demo.py  trl_ppo_integration.py  trust_demo.py  watch_demo.py
mcp/: README.md  pyproject.toml
mcp/styxx_mcp/: __init__.py  server.py
memory/: project_release_prep_7_4_1.md  project_shipped_scorer_broken_self_audit.md  project_threshold_law_paper.md
openapi/: styxx-v1.yaml
papers/: ANNOUNCEMENT_2026_05_25.md  ANNOUNCEMENT_2026_05_27.md  ANNOUNCEMENT_2026_05_27_followup.md  CONSTRUCT_CEILING_PUBLIC_RESPONSE_2026_05_29.md  EU_AI_ACT_ARTICLE_14_oversight_bridge_2026_06_07.md  EU_AI_ACT_COMPLIANCE_2026.md  INDEX_behavioral_knowledge_boundary_2026_05_25.md  INVENTION_STYXX_2026_06_07.md  MOONSHOTS_STYXX_2026_06_07.md  NIST_AI_RMF_BRIDGE_2026.md  PAPER_decorrelation_ceiling_2026_05_27.md  PAPER_recursive_discipline_2026_05_27.md  PROGRAM_BACKLOG.md  PROOF_CARRYING_COGNITION.md  REPORT_blackbox_cognometrics_2026_05_25.md  REPORT_decorrelation_ceiling_v2_2026_05_27.md  RESEARCH_LOOP.md  STYXX_CAPTURE_TRUST.md  STYXX_DEPLOYMENT_THREAT_MODEL.md  STYXX_PROTOCOL.md  SYNTHESIS_cognometric_boundary_2026_05_25.md  SYNTHESIS_decorrelation_ceiling_2026_05_25.md  THESIS_the_honesty_standard_2026_05_31.md  VISION_epistemic_immune_system_2026_05_25.md  alignment-inverted-cognitive-signals.md  calibration_fingerprints_v0.md  capability-amplification-v0.md  cognitive-instruction-set-v0-filled.md  cognitive-instruction-set-v0.md  cognitive-metrology-v1.bib  cognitive-metrology-v1.md  cognitive-monitoring-without-logprobs.md  cognometric-fingerprint-spec-v1.0.md  cognometry-manifesto.md  cognometry-research-agenda-2026.md  cognometry-v0.5-pdfsafe.md  cognometry-v0.5.md  cognometry-v0.md  cognometry_methodology_v7.md  corpus-coverage-law-2026-05-17.md  (+43 more)
release/: LAUNCH-DAY.md  SHIP_v710_CHECKLIST.md  X-AMPLIFY.md  cogn_rlhf_divergence_v0.json  cognometric-fingerprints-tweet.md  cognometry-distribution-kit.md  cognometry-launch-copy.md  distribution-week-playbook.md  every-mind-leaves-vitals-launch.md  every-mind-leaves-vitals-x-article.md  launch-go.html  self_healing_reflex_v0.json  synth_multi_instrument_v0.json  synth_preference_pairs_v0.jsonl  v3.5.0-release-notes.md  v3.5.0-tweet-draft.md  v3.8.0-tweet-draft.md  v5-amplify-kit.md  v6.1.0-tweet-draft.md  v6.2.0-HANDOFF.md  v6.2.0-launch-kit.md  v6.2.0-x-thread.md  v710_release_notes.md  x-launch-tweet-receipt.json  zenodo-deposit-receipt-emlv-versioned.json  zenodo-deposit-receipt-emlv.json  zenodo-deposit-receipt-software-v6.2.0.json  zenodo-deposit-receipt-spec-v1.0.json  zenodo-deposit-receipt-v22-robustness.json  zenodo-deposit-receipt.json  zenodo-submission-package.md
scripts/: _grounded_controls.py  _lenmatch_cem.py  _regen_construct_validity.py  _verify_length_control.workflow.js  analyze_fingerprint_geometry.py  backfill_attack_ci.py  bug_hunt.py  build_attack_seeds.py  build_demo_notebook.py  (+119 more)
(+3080 files in other folders)
