[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "styxx"
# Version is read dynamically from styxx/_version.py (the single source of truth)
# via [tool.setuptools.dynamic] below, so pyproject and the runtime __version__
# can never drift. To cut a release, bump styxx/_version.py only.
dynamic = ["version"]
description = "Cognitive observability for LLM agents. @styxx.profile returns a per-step cognometric readout: drift, confabulation, refusal, sycophancy, phase transition, low trust, incoherence — localized to the step that produced them. Calibrated AUC: 0.998 hallucination (HaluEval-QA), 0.976 refusal (XSTest-GPT-4), 0.943 tool-call drift (BFCL v3) — text-only register instruments with documented construct ceilings. Reference implementation of the Cognometric Fingerprint Specification v1.0. Pure Python."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "flobi", email = "heyzoos123@gmail.com" }
]
maintainers = [
    { name = "flobi", email = "heyzoos123@gmail.com" }
]
requires-python = ">=3.9"
keywords = [
    "llm",
    "agent",
    "agent-observability",
    "cognitive",
    "cognitive-profiler",
    "cognometric-fingerprint",
    "hallucination-detection",
    "refusal-detection",
    "tool-call-drift",
    "sycophancy-detection",
    "interpretability",
    "ai-safety",
    "langsmith",
    "datadog",
    "fathom",
    "spec-v1.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    # NOTE: "Typing :: Typed" intentionally removed — the package ships no
    # py.typed marker and mypy still reports real errors in core modules, so the
    # classifier was an overclaim. Re-add it only together with styxx/py.typed
    # once the public surface type-checks clean.
]
dependencies = [
    "numpy>=1.24",
    # scikit-learn powers the two flagship auditors — audit_confound and validate_probe. As of the
    # perf-and-weight work it is imported LAZILY, at the first CALL of those functions (see the
    # `_ensure_sklearn` helpers in confound_audit.py / probe_validity.py), NOT at `import styxx` — which
    # keeps a cold import off the sklearn/scipy/pandas graph (~2.4s). It is kept a BASE dependency so the
    # documented one-liner `from styxx import audit_confound; audit_confound(...)` works out of the box on a
    # bare `pip install styxx`. The lazy helpers already name `pip install 'styxx[sklearn]'` in their error,
    # so demoting it to that extra is now safe should a slimmer base ever be wanted; it is not done here
    # because it would change the runtime behaviour of a bare install. (sklearn pulls scipy + pandas.)
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
# scikit-learn ships in the BASE install (see the dependencies block), so this extra is normally a no-op.
# It exists so the lazy-import error path (`pip install 'styxx[sklearn]'`) resolves for slimmed bases that
# stripped it, and so a future base-slimming can move the pin here without touching the error message.
sklearn = ["scikit-learn>=1.3"]
openai  = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
# 0.5.4: framework integrations
langchain = ["langchain-core>=0.1"]
crewai = ["crewai>=0.1", "langchain-core>=0.1"]
autogen = ["pyautogen>=0.2"]
# 0.7.0: observability platform integrations
langsmith = ["langsmith>=0.1", "langchain-core>=0.1"]
langfuse = ["langfuse>=2.0", "langchain-core>=0.1"]
# 0.1.0a4: agent-card PNG renderer needs Pillow.
# 7.4.x: the cognometric registry card (luxury register) renders via matplotlib.
# Both renderers are pulled in by the same extra.
agent-card = ["Pillow>=10.0", "matplotlib>=3.7"]
# 0.3.0: tier 1 D-axis honesty — needs a local model
tier1 = [
    "torch>=2.1",
    "transformers>=4.40",
    "transformer-lens>=2.0",
]
# 0.4.0: tier 2 K/C/S SAE instruments — needs circuit-tracer
tier2 = [
    "torch>=2.1",
    "transformers>=4.40",
    "transformer-lens>=2.0",
    "circuit-tracer>=0.4",
]
# 4.0.0rc1: NLI contradiction signal for dialog/summarization hallucinations
# Ships the guardrail v3 calibration (9 signals, incl. NLI).
nli = [
    "torch>=2.0",
    "transformers>=4.35",
    "sentence-transformers>=2.2",
]
# 7.4.0: integrated MCP server (was the separate styxx-mcp package).
# Enables the `styxx-mcp` console script + python -m styxx.mcp.server.
mcp = [
    "mcp>=1.0.0; python_version >= '3.10'",
]
# 7.22.0: styxx.audit_hf_model / `styxx audit-model` — load a HuggingFace text classifier
# and audit it for length bias on a bundled boundary corpus. torch>=2.6 deserializes legacy
# .bin checkpoints under the CVE-2025-32434 safety gate (safetensors is exempt either way).
hf = [
    "transformers>=4.40",
    "torch>=2.6",
]
# phase-coherence primitive: styxx.coherence.primary_coherence / plv_hilbert
# need scipy.signal.hilbert (numpy is already a core dependency).
coherence = [
    "scipy>=1.10",
]
# 7.17.3: Ed25519 handoff-receipt signing (styxx.handoff_protocol). Previously
# cryptography was depended on by the signing tests but declared in NO extra, so
# those tests silently skipped in CI. Declaring it makes the signing path an
# installable, CI-guardable surface.
signing = [
    "cryptography>=41.0",
]
# 4.0.3: Guardrails AI validator (HallucinationCheck) backed by styxx
guardrails = ["guardrails-ai>=0.4"]
# 4.0.3: LlamaIndex evaluator (StyxxHallucinationEvaluator) for RAG faithfulness
llamaindex = ["llama-index-core>=0.10"]
schema = [
    "jsonschema>=4.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "jsonschema>=4.0",
]
# 7.4.3: the test extra used by CI. dev (pytest/ruff/jsonschema) plus the
# *light* optional stacks so the importorskip-gated tests actually run instead
# of silently skipping: MCP server, anthropic/openai adapters, the matplotlib +
# Pillow card renderers, and the langchain adapter. The heavy torch-based
# stacks (tier1, tier2, nli) are deliberately excluded — those tests skip in
# CI; run them locally with `pip install -e ".[test,nli]"`.
test = [
    "pytest>=7.0",
    "ruff>=0.1",
    "jsonschema>=4.0",
    "mcp>=1.0.0; python_version >= '3.10'",
    "anthropic>=0.20",
    "openai>=1.0",
    "Pillow>=10.0",
    "matplotlib>=3.7",
    "langchain-core>=0.1",
]

[project.urls]
Homepage       = "https://styxx-org.netlify.app"
Documentation  = "https://styxx-org.netlify.app"
"Fathom Lab"   = "https://fathomlab-io.netlify.app"
"Telegram"     = "https://t.me/STYXX_COMM"
"Research Paper" = "https://doi.org/10.5281/zenodo.19326174"
"@fathom_lab"  = "https://x.com/fathom_lab"
"Source"       = "https://github.com/fathom-lab/styxx"
"Issue Tracker" = "https://github.com/fathom-lab/styxx/issues"

[project.scripts]
styxx = "styxx.cli:main"
styxx-mcp = "styxx.mcp.server:main"
styxx-demo = "styxx.selfaudit_demo:main"
styxx-conscience = "styxx.conscience:main"
styxx-flagship = "styxx.flagship:main"

[tool.setuptools.dynamic]
# `attr` reads styxx/_version.py.__version__ via AST without importing the
# package (so the heavy import graph never runs at build time). Do NOT switch
# this to `file` — that would set the version to the file's raw text
# (`__version__ = "x.y.z"\n`), not the literal.
version = { attr = "styxx._version.__version__" }

[tool.setuptools]
packages = [
    "styxx", "styxx.adapters", "styxx.centroids", "styxx.recipes",
    "styxx.anthropic_hack", "styxx.residual_probe",
    "styxx.residual_probe.atlas", "styxx.guardrail",
    "styxx.attack", "styxx.attack.seeds",
    "styxx.mcp",
    "styxx.three_axis",
    "styxx.compliance",
    "styxx.compliance.templates",
    "styxx.fonts",
    "styxx._data",
]

[tool.setuptools.package-data]
"styxx.centroids" = ["*.json"]
"styxx.residual_probe.atlas" = ["*.json", "*.pt", "README.md"]
"styxx.attack.seeds" = ["*.jsonl"]
"styxx.attack" = ["signature_calibration_v0.json", "universal_suffixes_v0.json"]
"styxx.compliance.templates" = ["*.md"]
"styxx.fonts" = ["*.ttf"]
"styxx._data" = ["*.json", "*.md", "*.jsonl"]

[tool.ruff]
# styxx supports Python >= 3.9. Pin the target so ruff never suggests (or its
# --fix never introduces) syntax newer than 3.9 — notably pyupgrade rewrites
# like `list[int]` / `X | None`, which fail at runtime on 3.9 without
# `from __future__ import annotations`. pyupgrade (UP*) is therefore NOT in the
# selected set below.
target-version = "py39"

[tool.ruff.lint]
# Pyflakes (F) catches the real defects — undefined names, unused
# imports/variables, redefinitions — and E9 catches syntax errors (e.g. the
# f-string-backslash break that shipped on 3.9-3.11). Line length (E501),
# import sorting (I), and stylistic rules are intentionally not enforced.
select = ["F", "E9"]

[tool.ruff.lint.per-file-ignores]
# __init__.py intentionally imports the full backward-compat attribute surface
# (most of those names are deliberately kept out of __all__). The two F811s
# there are the documented stream / agent_name false-positives.
"__init__.py" = ["F401", "F403", "F811"]

[tool.pytest.ini_options]
# Confine collection to the canonical suite. Without this, a bare `pytest`
# (no path) walks scratch/ and scripts/dogfood/ and hits 3 collection errors —
# a missing module import and two module-level OpenAI calls that fire a live 401
# at import time. CI already runs `pytest tests` explicitly; this makes the bare
# invocation match that, so a contributor's `pytest` is green for the right
# reason. Integration/paper tests outside tests/ are run by passing their path
# explicitly (they were never part of the bare-pytest or CI run).
testpaths = ["tests"]
