[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "styxx-mcp"
version = "0.4.0"
description = "MCP server: 12 cognometric tools — measurement (v0.2), adversarial robustness (v0.3), and semantic-grounding deception_v2 (v0.4 NLI, AUC 0.82 on TruthfulQA)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Fathom Lab" }]
keywords = ["mcp", "styxx", "cognometric", "honesty", "sycophancy", "deception", "reflex-loop", "llm", "anthropic", "claude"]
dependencies = [
    "mcp>=1.0.0",
    "styxx>=7.1.0",
]

[project.urls]
Homepage = "https://fathom.darkflobi.com/styxx"
Repository = "https://github.com/fathom-lab/styxx"

[project.scripts]
styxx-mcp = "styxx_mcp.server:main"

[tool.setuptools.packages.find]
include = ["styxx_mcp*"]
